--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body {
 }
 
 #configBoard {
+    font-size: 5vw;
     padding: 1vw;
     margin: 0;
     opacity: 1;
@@ -132,4 +133,12 @@ body {
     border: .3vw solid #ccc;
     border-radius: 2.5%;
     cursor: pointer;
+}
+
+select {
+    font-size: 3vw;
+}
+
+input {
+    font-size: 3vw;
 }
