--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ body {
 }
 
 #settings{
+    display: none;
     z-index: 9;
     margin: 0;
     padding: 0.5vw;
@@ -133,6 +134,7 @@ body {
     cursor: pointer;
 }
 #newGame{
+    display: none;
     z-index: 8;
     margin: 0;
     padding: 0.5vw;
